<?xml version="1.0"?>
<package format="2">
  <name>igvc_controller</name>
  <version>0.0.0</version>
  <description>The igvc_controller package</description>
  <maintainer email="dhruv@todo.todo">dhruv</maintainer>
  <license>TODO</license>
  <author email="jane.doe@example.com">Jane Doe</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>turtlesim</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
